// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

generator dbml {
  provider   = "prisma-dbml-generator"
  output     = "./dbml"
  outputName = "schema.dbml"
}

model User {
  id            Int      @id @default(autoincrement())
  email         String   @unique
  firstName     String?
  lastName      String?
  password      String?
  role          Role     @default(USER)
  createdAt     DateTime @default(now())
  updatedAt     DateTime @updatedAt
  emailVerified Boolean  @default(false)
  image         String?
  Exam          Exam[]
}

model Exam {
  id                Int       @id @default(autoincrement())
  name              String    @unique
  description       String?
  createdAt         DateTime  @default(now())
  updatedAt         DateTime  @updatedAt
  user              User      @relation(fields: [userId], references: [id])
  deletedAt         DateTime?
  isDeleted         Boolean   @default(false)
  isNegativeMarking Boolean   @default(false)
  isShuffle         Boolean   @default(false)
  isPublic          Boolean   @default(true)
  allowReview       Boolean   @default(false)

  userId    Int
  questions Question[]
}

model Question {
  id          Int          @id @default(autoincrement())
  question    String
  description String?
  type        QuestionType
  score       Int          @default(1)
  createdAt   DateTime     @default(now())
  updatedAt   DateTime     @updatedAt
  deletedAt   DateTime?
  isDeleted   Boolean      @default(false)

  options String[]
  answers Int[]

  exam   Exam @relation(fields: [examId], references: [id])
  examId Int

  tags Tag[]
}

model Tag {
  id        Int        @id @default(autoincrement())
  name      String     @unique
  createdAt DateTime   @default(now())
  updatedAt DateTime   @updatedAt
  questions Question[]
}

enum Role {
  ADMIN
  USER
}

enum QuestionType {
  TRUE_FALSE
  MULTIPLE_CHOICE
  SHORT_ANSWER
  MULTIPLE_SELECT
}
