//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id Int [pk, increment]
  email String [unique, not null]
  firstName String
  lastName String
  password String
  role Role [not null, default: 'USER']
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  emailVerified Boolean [not null, default: false]
  image String
  Exam Exam [not null]
}

Table Exam {
  id Int [pk, increment]
  name String [unique, not null]
  description String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  user User [not null]
  deletedAt DateTime
  isDeleted Boolean [not null, default: false]
  isNegativeMarking Boolean [not null, default: false]
  isShuffle Boolean [not null, default: false]
  isPublic Boolean [not null, default: true]
  allowReview Boolean [not null, default: false]
  userId Int [not null]
  questions Question [not null]
}

Table Question {
  id Int [pk, increment]
  question String [not null]
  description String
  type QuestionType [not null]
  score Int [not null, default: 1]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  deletedAt DateTime
  isDeleted Boolean [not null, default: false]
  options String[] [not null]
  answers Int[] [not null]
  exam Exam [not null]
  examId Int [not null]
  tags Tag [not null]
}

Table Tag {
  id Int [pk, increment]
  name String [unique, not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  questions Question [not null]
}

Table QuestionToTag {
  tagsId Int [ref: > Tag.id]
  questionsId Int [ref: > Question.id]
}

Enum Role {
  ADMIN
  USER
}

Enum QuestionType {
  TRUE_FALSE
  MULTIPLE_CHOICE
  SHORT_ANSWER
  MULTIPLE_SELECT
}

Ref: Exam.userId > User.id

Ref: Question.examId > Exam.id